# sudoku-ml

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup_runpod.sh  train_runpod.sh
src/data/: cache.py  encoding.py  generator.py  loader.py
src/model/: dataset.py  inference.py  network.py  train.py
src/strategies/: __init__.py  backtrack.py  candidates.py  hidden_pair.py  hidden_single.py  naked_pair.py  naked_single.py  pointing_pairs.py  units.py
tests/: test_encoding.py  test_generator.py  test_strategies.py
